# mailgun

./: .gitignore  mailgun.cabal  stack.yaml
src/Rackspace/: MailGun.hs
test/: SendMany.hs
