name:                mailgun
version:             0.1.1.0
synopsis:            Connector to Rackspace's Mailgun Service
description:         Allows users to directly access Rackspace's Mailgun service
                     without having to work with the underlying REST service.
license:             MIT
license-file:        LICENSE
author:              Andrew Rademacher
maintainer:          andrewrademacher@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

homepage:            https://github.com/AndrewRademacher/mailgun
bug-reports:         https://github.com/AndrewRademacher/mailgun/issues

source-repository head
    type:            git
    location:        https://github.com/AndrewRademacher/mailgun.git

library
    ghc-options:        -Wall
    exposed-modules:    Rackspace.MailGun 
    hs-source-dirs:     src      
    default-language:   Haskell2010
    build-depends:      base
                    ,   text
                    ,   conduit
                    ,   http-conduit
                    ,   bytestring
                    ,   network
                    ,   http-client-multipart
                    ,   transformers
                    ,   monad-control
                    ,   http-client
                    ,   failure
                    ,   exceptions

executable send
    main-is:            Send.hs
    hs-source-dirs:     test
    default-language:   Haskell2010
    build-depends:      base
                    ,   text
                    ,   mailgun

executable sendmany
    main-is:            SendMany.hs
    hs-source-dirs:     test
    default-language:   Haskell2010
    build-depends:      base
                    ,   text
                    ,   http-conduit
                    ,   transformers
                    ,   mailgun
